<resources>

    <string name="app_name">Dallas Stadium Parking</string>
    <string name="myTickets">My Tickets</string>
    <string name="purchaseTickets">Purchase Ticket</string>
    <string name="dummy">dummy Ticket</string>
    <string name="parking">Parking</string>
    <string name="type">Type: </string>
    <string name="lot">Lot: </string>
    <string name="tailgate">Tailgate: </string>
    <string name="howLong">How Long? </string>
    <string name="departFrom">Depart From: </string>
    <string name="viewTicket">View Ticket</string>
    <string name="carFinder">Car Finder</string>
    <string name="back">Back</string>
    <string name="letsGo">Let\'s Go!</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="cash">Cash</string>
    <string name="reserved">Reserved</string>
    <string name="season">Season</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>    
    <string name="home">Home</string>    
    <string name="currentLocation">Current Location</string>    
    <string name="minutes">minutes</string> 
    <string name="ok">OK</string>    
    <string name="selectLotType">Select Lot Type</string>    
    <string name="selectLotLetter">Select Lot Letter</string>    
    <string name="tailgatingLengthSet">Tailgating Length Set </string>    
    <string name="hint">  </string>    
    <string name="addTicketPrompt">To add a ticket, share an image with this application from your Gallery</string>    
    <string name="launchGallery">Launch Gallery</string>
    <string name="rangersParking">Rangers Parking</string>
    <string name="cowboysParking">Cowboys Parking</string>

</resources>
